--- a/PotionCraftBookmarkOrganizer.csproj
+++ b/PotionCraftBookmarkOrganizer.csproj
@@ -1,84 +1,49 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>PotionCraftBookmarkOrganizer</AssemblyName>
-    <Description>Recipe Waypoint Mod for Potion Craft</Description>
-    <Version>1.0.0</Version>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Version>2.0.1.0</Version>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<AssemblyName>PotionCraftBookmarkOrganizer</AssemblyName>
+		<Product>com.fahlgorithm.potioncraftbookmarkorganizer</Product>
+		<Description>Recipe Waypoint Mod for Potion Craft</Description>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Bookmark_organizer_recipe_slot.png" />
-    <None Remove="InGameImages\Bookmark_organizer_recipe_slot_0.png" />
-    <None Remove="InGameImages\Bookmark_organizer_recipe_slot_1.png" />
-    <None Remove="InGameImages\Bookmark_organizer_recipe_slot_2.png" />
-    <None Remove="InGameImages\Bookmark_organizer_recipe_slot_3.png" />
-    <None Remove="InGameImages\Bookmark_organizer_recipe_slot_bottom_left_mask.png" />
-    <None Remove="InGameImages\Group_bookmark_icon.png" />
-    <None Remove="InGameImages\Group_bookmark_icon_mask.png" />
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_3.png" />
+		<EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_2.png" />
+		<EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_1.png" />
+		<EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_0.png" />
+		<EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_bottom_left_mask.png" />
+		<EmbeddedResource Include="InGameImages\Group_bookmark_icon.png" />
+		<EmbeddedResource Include="InGameImages\Group_bookmark_icon_mask.png" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_3.png" />
-    <EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_2.png" />
-    <EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_1.png" />
-    <EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_0.png" />
-	<EmbeddedResource Include="InGameImages\Bookmark_organizer_recipe_slot_bottom_left_mask.png" />
-	<EmbeddedResource Include="InGameImages\Group_bookmark_icon.png" />
-	<EmbeddedResource Include="InGameImages\Group_bookmark_icon_mask.png" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
+		<PackageReference Include="BepInEx.Core" Version="5.*" />
+		<PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
+		<PackageReference Include="HarmonyX" Version="2.10.0" />
+		<PackageReference Include="UnityEngine.Modules" Version="2022.1.13" IncludeAssets="compile" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.Core" Version="5.*" />
-    <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
-    <PackageReference Include="HarmonyX" Version="2.10.0" />
-    <PackageReference Include="UnityEngine.Modules" Version="2022.1.13" IncludeAssets="compile" />
-  </ItemGroup>
-  
-  <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Reference Include="DOTween">
-      <HintPath>..\PotionCraftPourBackIn\lib\DOTween.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>lib\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="PotionCraft.Core">
-      <HintPath>lib\PotionCraft.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="PotionCraft.GamepadNavigation">
-      <HintPath>lib\PotionCraft.GamepadNavigation.dll</HintPath>
-    </Reference>
-    <Reference Include="PotionCraft.InputSystem">
-      <HintPath>lib\PotionCraft.InputSystem.dll</HintPath>
-    </Reference>
-    <Reference Include="PotionCraft.Scripts">
-      <HintPath>lib\PotionCraft.Scripts.dll</HintPath>
-    </Reference>
-    <Reference Include="PotionCraft.Settings">
-      <HintPath>lib\PotionCraft.Settings.dll</HintPath>
-    </Reference>
-    <Reference Include="PotionCraft.SoundSystem">
-      <HintPath>lib\PotionCraft.SoundSystem.dll</HintPath>
-    </Reference>
-    <Reference Include="ThirdParty.DOTween">
-      <HintPath>..\PotionCraftPourBackIn\lib\ThirdParty.DOTween.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>lib\Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>lib\UnityEngine.UI.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Folder Include="Thunderstore\plugins\" />
-  </ItemGroup>
+	<ItemGroup Condition="$(DefineConstants.Contains('NETFRAMEWORK'))">
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Reference Private="false" Include="DOTween" HintPath="..\PotionCraftPourBackIn\lib\DOTween.dll" />
+		<Reference Private="false" Include="ThirdParty.DOTween" HintPath="..\PotionCraftPourBackIn\lib\ThirdParty.DOTween.dll" />
+		
+		<Reference Private="false" Include="Newtonsoft.Json" HintPath="$(LibFolder)\Newtonsoft.Json.dll" />
+		<Reference Private="false" Include="PotionCraft.Core" HintPath="$(LibFolder)\PotionCraft.Core.dll" />
+		<Reference Private="false" Include="PotionCraft.GamepadNavigation" HintPath="$(LibFolder)\PotionCraft.GamepadNavigation.dll" />
+		<Reference Private="false" Include="PotionCraft.InputSystem" HintPath="$(LibFolder)\PotionCraft.InputSystem.dll" />
+		<Reference Private="false" Include="PotionCraft.Scripts" HintPath="$(LibFolder)\PotionCraft.Scripts.dll" />
+		<Reference Private="false" Include="PotionCraft.Settings" HintPath="$(LibFolder)\PotionCraft.Settings.dll" />
+		<Reference Private="false" Include="PotionCraft.SoundSystem" HintPath="$(LibFolder)\PotionCraft.SoundSystem.dll" />
+		<Reference Private="false" Include="Unity.TextMeshPro" HintPath="$(LibFolder)\Unity.TextMeshPro.dll" />
+		<Reference Private="false" Include="UnityEngine.UI" HintPath="$(LibFolder)\UnityEngine.UI.dll" />
+	</ItemGroup>
 </Project>
