--- a/PotionCraftBookmarkOrganizer.csproj
+++ b/PotionCraftBookmarkOrganizer.csproj
@@ -33,9 +33,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Private="false" Include="DOTween" HintPath="..\PotionCraftPourBackIn\lib\DOTween.dll" />
-		<Reference Private="false" Include="ThirdParty.DOTween" HintPath="..\PotionCraftPourBackIn\lib\ThirdParty.DOTween.dll" />
-		
+		<Reference Private="false" Include="DOTween" HintPath="$(LibFolder)\DOTween.dll" />
+		<Reference Private="false" Include="ThirdParty.DOTween" HintPath="$(LibFolder)\ThirdParty.DOTween.dll" />
 		<Reference Private="false" Include="Newtonsoft.Json" HintPath="$(LibFolder)\Newtonsoft.Json.dll" />
 		<Reference Private="false" Include="PotionCraft.Core" HintPath="$(LibFolder)\PotionCraft.Core.dll" />
 		<Reference Private="false" Include="PotionCraft.GamepadNavigation" HintPath="$(LibFolder)\PotionCraft.GamepadNavigation.dll" />
